--- a/home_page.css
+++ b/home_page.css
@@ -2,6 +2,11 @@
     display: block;
 }
 
+.bigbox {
+    margin: 2% 2%;
+
+}
+
 .book_rank_box {
     border: 1px solid #f5c722;
     text-align: center;
