--- a/login.css
+++ b/login.css
@@ -93,7 +93,7 @@ body {
     column-gap: 0.75rem;
     border-bottom: 2px solid var(--white-color);
 }
-.input-icon, .eye-icon {
+.input-icon {
     font-size: 1.25rem;
 }
 .input-box {
@@ -116,6 +116,7 @@ body {
 .form-box:nth-child(2) input {
     padding-right: 1.8rem;
 }
+
 /* -- Input focus move up label -- */
 .input-area:focus + .input-label {
     top: -12px;
