--- a/404-page/404.css
+++ b/404-page/404.css
@@ -1,165 +1,34 @@
-/* Reference by https://codepen.io/valerite-dev/pen/KMZyLz */
-
-/* -- Font -- */
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
-/* Allow nested */
-@use postcss-nested;
-/* -- Basic setting --  */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-body, html {
-  height: 100%;
-}
-body {
-  height: 100%;
-  position: relative;
-  margin: 2rem;
-  background-color: #6D8B74;
-  font-family: monospace;
-  font-size: x-large;
-  color: white;
-  overflow: hidden;
-}
-
-.tips {
-  width: 100%;
-  text-align: center;
-  padding-top: 5rem;
-}
-
-.shelf {
-  width: 80%;
-  max-width: 20rem;
-  height: 60vh;
-  max-height: 14rem;
-  text-align: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border: 0.5rem solid #5F7161;
-  border-radius: 0.5rem;
-  background-color: rgba(255, 255, 255, 0.12);
-  perspective: 300rem;
-  box-shadow: inset 0 0 2rem rgba(0, 0, 0, 0.1);
-}
-.door {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  display: flex;
-  padding: 1rem;
-  background-color: #5F7161;
-  align-items: center;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-  &::before {
-    width: 1.5rem;
-    height: 1.5rem;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.1);
-    content: "";
-  }
-  &.left {
-    border-radius: 0 0.75rem 0.75rem 0;
-    justify-content: flex-end;
-    animation: 
-      leftDoorOpen 3.5s ease-out forwards 1s,
-      leftDoorFlap 15s linear infinite forwards 9s;
-    transform-origin: 0 0 0;
-  }
-  &.right {
-    right: 0;
-    border-radius: 0.75rem 0 0 0.75rem;
-    animation: 
-      rightDoorOpen 3s ease-out forwards 1.5s,
-      rightDoorFlap 10s linear infinite forwards 8s;
-    transform-origin: 100% 0 0;
-  }
-}
-
-.book {
-  position: absolute;
-  padding: 0.7rem 1.5rem 0.5rem 1.5rem;
-  border-radius: 0.25rem;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: white;
-  font-size: 1rem;
-  font-weight:200;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-  cursor: pointer;
-  box-shadow: inset 0 0 0.75rem rgba(255, 255, 255, 0.1);
-  &.home-page {
-    right: 2rem;
-    bottom: 0.3rem;
-    border-radius: 0.3rem 0 0 0.3rem;
-  }
-   &.profile {
-    right: 0.8rem;
-    bottom: 3.3rem;
-    border-radius: 0.3rem 0 0 0.3rem;
-  }
-  
-  &.not-found {
-    width: 80%;
-    max-width:11rem;
-    height: 80%;
-    max-height: 3rem;
-    border: 1.5px dashed rgba(255, 255, 255, 0.3);
-    background-color: transparent;
-    transform: rotate(-90deg) translate(-11rem, -5.5rem) scale(1);
-    transform-origin: 0;
-    cursor: default;
-    animation: bookFadeOut 1s 3s infinite forwards;
-    
-    &::after {
-      display: block;
-      width: 10rem;
-      padding-left: 3.5rem;
-      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='80' height='30'><path fill='rgb(255, 255, 255)' d='M7.688,3.737C6.1,10.409,4.624,16.982,2.475,23.517c-0.424,1.29,0.724,2.338,1.957,1.916 c5.879-2.021,11.743-4.107,17.409-6.696c1.246-0.572,0.443-2.366-0.815-1.932c-3.856,1.333-7.695,2.69-11.565,3.959 c2.879-2.526,5.485-5.215,9.013-7.17c4.441-2.459,9.299-4.109,14.281-4.915c10.903-1.772,22.052,0.562,31.979,5.04 c9.241,4.162,12.895,8.725,13.164,4.942c0.121-1.69-5.57-4.953-14.125-8.714C53.19,5.292,41.094,3.539,29.636,6.058 c-7.122,1.567-16.708,5.374-22.064,11.544c1.359-4.455,2.461-9.028,3.032-13.563C10.852,2.091,8.12,1.927,7.688,3.737z'/></svg>");
-      background-repeat: no-repeat;
-      background-size: 4rem;
-      background-position: left center;
-      font-family: "Dancing Script";
-      text-transform: lowercase;
-      font-size: 25px;
-      content: "this page can't be found";
-      transform: rotate(90deg) translate(5rem, -1rem);
-      opacity: 0.4; 
-    }
-  }
-  &:hover:not(.not-found) {
-    background-color: rgba(255, 255, 255, 0.5);
-  }
-}
-@keyframes leftDoorOpen {
-  60% {transform: rotateY(-115deg)}
-  100% {transform: rotateY(-110deg)}
-}
-@keyframes rightDoorOpen {
-  60% {transform: rotateY(125deg)}
-  100% {transform: rotateY(120deg)}
-}
-@keyframes rightDoorFlap {
-  0% { transform: rotateY(120deg)}
-  5% {transform: rotateY(125deg)}
-  15% {transform: rotateY(117deg)}
-  25% {transform: rotateY(123deg)}
-  30% {transform: rotateY(120deg)}
-  100% {transform: rotateY(120deg)}
-}
-@keyframes leftDoorFlap {
-  0% { transform: rotateY(-110deg)}
-  5% {transform: rotateY(-115deg)}
-  15% {transform: rotateY(-107deg)}
-  25% {transform: rotateY(-113deg)}
-  30% {transform: rotateY(-110deg)}
-  100% {transform: rotateY(-110deg)}
-}
-@keyframes bookFadeOut {
-  50% {border: 1px dashed rgba(255, 255, 255, 0.1);}
-}
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Basic Page Needs -->
+        <meta charset="UTF-8">
+        <meta name="description" content="This is a page that shows content not found.">
+        <meta name="author" content="Yunfang Lyu(23685059)">
+        <!-- Reference by https://codepen.io/valerite-dev/pen/KMZyLz -->
+        <meta name="keywords" content="404">
+        <title>BookReviews</title>
+        <!-- Mobile Specific Metas -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="404.css">
+    </head>
+    <body>
+        <div class="tips">
+            <h1>Error 404</h1>
+            <br>
+            <p>The page you're looking for can't be found</p>
+        </div>
+        <div class="container">
+            <div class="shelf">
+                <a class="book home-page">Home Page</a>
+                <a class="book profile">Profile</a>
+                <span class="book not-found"></span>
+                <span class="door left"></span>
+                <span class="door right"></span>
+            </div>
+        </div>
+    </body>
+</html>
