--- a/login-page-front/login.css
+++ b/login-page-front/login.css
@@ -1,222 +1,174 @@
-/* -- Font -- */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-
-/* -- Variables CSS -- */
-:root {
-  /* -- Colors -- */
-  /*Color mode HSL(hue, saturation, lightness)*/
-  --white-color: hsl(0, 0%, 100%);
-  --black-color: hsl(0, 0%, 0%);
-  /* -- Font and typography -- */
-  /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: "Poppins", sans-serif;
-  --h1-font-size: 1.8rem;
-  --normal-font-size: 1.2rem;
-  --small-font-size: 0.9rem;
-  /* -- Font weight -- */
-  --font-medium: 500;
-}
-/* -- Basic setting --  */
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body, 
-input, 
-button {
-    font-size: var(--normal-font-size);
-    font-family: var(--body-font);
-}
-
-input, 
-button {
-    border: none;
-    outline: none;
-}
-
-a {
-    text-decoration: none;
-}
-/* -- Background -- */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--white-color);
-    height: 100vh;
-    overflow: hidden;
-    background-image: url('../images/background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow: hidden;
-}
-
-/* -- Flip container -- */
-.flip-container {
-    perspective: 1000px;
-    backdrop-filter: blur(8px);
-}
-.flipper {
-    padding: 30px;
-    width: 420px;
-    height:580px;
-    position: relative;
-    border: 2px solid white;
-    border-radius: 1rem;
-    transition: 0.6s;
-    transform-style: preserve-3d;
-}
-
-/* -- Form part -- */
-.form-container {
-    width: 332px;
-    margin-left: 5px;
-}
-.form-title {
-    text-align: center;
-    font-size: var(--h1-font-size);
-    font-weight: var(--font-medium);
-    margin-bottom: 2rem;
-}
-.form-content, .form-box {
-    display: grid;
-}
-.form-content {
-    row-gap: 1.75rem;
-    margin-bottom: 1.2rem;
-}
-.form-box {
-    grid-template-columns: max-content 1fr;
-    align-items: center;
-    column-gap: 0.75rem;
-    border-bottom: 2px solid var(--white-color);
-}
-.input-icon {
-    font-size: 1.25rem;
-}
-.input-box {
-    position: relative;
-}
-.input-area {
-    width:100%;
-    padding-block:0.8rem;
-    background: none;
-    color: var(--white-color);
-    position: relative;
-}
-.input-label {
-    position: absolute;
-    left:0;
-    top: 13px;
-    font-weight: var(--font-medium);
-    transition: top 0.3s, font-size 0.3s;
-}
-.form-box:nth-child(2) input {
-    padding-right: 1.8rem;
-}
-
-/* -- Input focus move up label -- */
-.input-area:focus + .input-label {
-    top: -12px;
-    font-size: var(--small-font-size);
-}
-
-/* -- Input focus sticky top label -- */
-.input-area:not(:placeholder-shown).input-area:not(:focus) + .input-label {
-    top: -12px;
-    font-size: var(--small-font-size);
-}
-/* -- This is a check box setting -- */
-.check-container, .check-group {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.check-container {
-    margin-bottom: 1.5rem;
-}
-.check-label, .login-forgot, .reminder {
-    font-size: var(--small-font-size);
-}
-.check-group {
-    column-gap: 0.5rem;
-}
-.check-box {
-    width: 16px;
-    height: 16px;
-}
-.login-forgot {
-    color: var(--white-color);
-}
-.login-forgot:hover {
-    text-decoration: underline;
-}
-/* -- This is a setting for login button and register button, 
-because they are same size and larger than button in reset part. */
-#login-button, #register-button {
-    width:100%;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    background-color: var(--white-color);
-    font-weight: var(--font-medium);
-    cursor: pointer;
-    margin-bottom: 2rem;
-}
-/* -- Specific setting for buttons in reset part */
-#validate-button, #reset-button {
-    width: 100%;
-    margin-top: 10px;
-    border-radius: 0.5rem;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-/* This is a reminder to flip into different parts. */
-.reminder {
-    text-align: center;
-    color: var(--white-color);
-}
-.reminder a {
-    color: var(--white-color);
-    font-weight: var(--font-medium);
-    font-size: var(--normal-font-size);
-}
-.reminder a:hover {
-    text-decoration: underline;
-}
-/* -- Continue flip effect setting */
-.login, .register, .reset {
-    position: absolute;
-    left: 50%;
-    top:50%;
-    transform-style: preserve-3d;
-    transform-origin: center;
-    backface-visibility: hidden;
-}
-.login {
-    transform: translate(-50%, -50%) rotateY(0deg);
-    
-}
-.register {
-    transform: translate(-50%, -50%) rotateY(180deg);
-    visibility: hidden;
-    pointer-events: none;
-}
-.reset {
-    transform: translate(-50%, -50%) rotateY(180deg);
-    visibility: hidden;
-    pointer-events: none;
-}
-.flip {
-    transform: rotateY(180deg);
-}
-/* -- Add media query -- */
-@media only screen and (max-width: 480px) {
-    .flip-container {
-        width: 95%; 
-    }
-    .flipper {
-        width: 99%;
-    }
-}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Basic Page Needs -->
+        <meta charset="UTF-8">
+        <meta name="description" content="This is a login page for our web app.">
+        <meta name="author" content="Yunfang Lyu(23685059)">
+        <meta name="keywords" content="login, register, reset">
+        <title>Sign in or Sign up or Reset password</title>
+        <!-- Mobile Specific Metas -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
+        
+    </head>
+    <body>
+        <img src="/images/background.jpg" alt="login background image">
+        <div class="flip-container">
+            <div class="flipper" id="flipper">
+                <div class="login" id="login">
+                    <form class="form-container" id="login-form" action="#" method="POST">
+                        <h1 class="form-title">Log in</h1>
+                        <div class="form-content">
+                            <div class="form-box">
+                                <i class="ri-user-3-line input-icon"></i>
+                                <div class="input-box">
+                                    <input 
+                                        required 
+                                        type="text" 
+                                        class="input-area" id="login-user-name" 
+                                        placeholder=" "
+                                        maxlength="20">
+                                    <label for="login-user-name" class="input-label">User name</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-content">
+                            <div class="form-box">
+                                <i class="ri-lock-2-line input-icon"></i>
+                                <div class="input-box">
+                                    <input 
+                                        required 
+                                        type="password" 
+                                        class="input-area" id="login-password" 
+                                        placeholder=" "
+                                        maxlength="20">
+                                    <label for="login-password" class="input-label">Password</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="check-container">
+                            <div class="check-group">
+                                <input type="checkbox" class="check-box" id="login-check">
+                                <label for="login-check" class="check-label">Remember me</label>
+                            </div>
+                            <a class="flipbutton login-forgot" id="to-reset" href="#">Forgot Password?</a>
+                        </div>
+                        <br>
+                        <button type="submit" id="login-button">Login</button>
+                        <p class="reminder">
+                            Don't have an account?
+                            <br>
+                            <a class="flipbutton" id="to-register" href="#">Register</a>
+                        </p>
+                     </form>
+                </div>
+                <div class="register" id="register">
+                    <form class="form-container" id="register-form" action="#" method="POST">
+                        <h1 class="form-title">Register</h1>
+                        <div class="form-content">
+                            <div class="form-box">
+                                <i class="ri-user-3-line input-icon"></i>
+                                <div class="input-box">
+                                    <input 
+                                        required 
+                                        type="text" 
+                                        class="input-area" id="register-user-name" 
+                                        placeholder=" "
+                                        maxlength="20"
+                                        pattern="[a-zA-Z0-9_]+" 
+                                        title="Only alphabets, numbers, and underscore'_' are allowed">
+                                    <label for="register-user-name" class="input-label">User name</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-content">
+                            <div class="form-box">
+                                <i class="ri-lock-2-line input-icon"></i>
+                                <div class="input-box">
+                                    <input 
+                                        required     
+                                        type="password" 
+                                        class="input-area" id="register-password" 
+                                        placeholder=" "
+                                        maxlength="20">
+                                    <label for="register-password" class="input-label">Password</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-content">
+                            <div class="form-box">
+                                <i class="ri-question-line input-icon"></i>
+                                <div class="input-box">
+                                    <input
+                                        required 
+                                        type="text" 
+                                        class="input-area" id="security-question" 
+                                        placeholder=" "
+                                        maxlength="30">
+                                    <label for="security-question" class="input-label">What's your favorite book?</label>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <button type="submit" id="register-button">Register</button>
+                        <p class="reminder">
+                            Already have an account?
+                            <br>
+                            <a class="flipbutton" id="to-login-1" href="#">Login Here</a>
+                        </p>
+                    </form>
+                </div>
+                <div class="reset" id="reset">
+                    <form class="form-container" id="validation-form" action="#" method="POST">
+                        <h1 class="form-title">Reset Password</h1>
+                        <div class="form-content">
+                           <div class="form-box">
+                              <i class="ri-user-3-line input-icon"></i>
+                              <div class="input-box">
+                                    <input type="text" required class="input-area" id="validate-name" placeholder=" ">
+                                    <label for="validate-name" class="input-label">User name</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-content">
+                            <div class="form-box">
+                                <i class="ri-question-line input-icon"></i>
+                                <div class="input-box">
+                                    <input type="text" required class="input-area" id="validate-question" placeholder=" ">
+                                    <label for="validate-question" class="input-label">What's your favorite book?</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" id="validate-button">Validate</button>
+                        <br>
+                        <div class="form-content" id="reset-part"> 
+                            <div class="form-box">
+                                <i class="ri-lock-2-line input-icon"></i>
+                                <div class="input-box">
+                                    <input type="password" required class="input-area" id="reset-password" placeholder=" ">
+                                    <label for="reset-password" class="input-label">Password</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" id="reset-button">Reset</button>
+                        <p class="reminder">
+                            Successful?
+                            <br>
+                            <a class="flipbutton" id="to-login-2" href="#">Login Here</a>
+                        </p>
+                     </form>
+                </div>
+            </div>
+        </div>
+        <!-- JavaScripts -->
+        <script src="loading.js" defer></script>
+        <script src="flip.js"></script>
+        <script src="register-limit.js"></script>
+        <script src="remember.js"></script>
+    </body>
+</html>
