--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -1,85 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<!-- Basic Page Needs -->
-	<meta charset="UTF-8">
-	<meta name="description" content="This is an index page for our web app.">
-	<meta name="author" content="Yunfang Lyu(23685059)">
-	<meta name="keywords" content="write comments">
-	{% if title %}
-	<title>Welcome - {{ title }}</title>
-	{% else %}
-	<title>Welcome to webapp!</title>
-	{% endif %}
-	<!-- Mobile Specific Metas -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<!-- Stylesheets -->
-	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='love.png') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-</head>
+{% extends "base.html" %}
 
-<body>
-	<nav>
-		<div class="sidebar">
-			<input type="checkbox" id="checkbox">
-			<label for="checkbox">
-				<i class="fa fa-outdent"></i>
-			</label>
-			<ul>
-				<li>
-					<img class="profile-photo" src="{{ url_for('static', filename='user.png') }}" alt="user profile photo">
-					<span>User</span>
-				</li>
-				<li>
-					<a href="{{ url_for('index') }}">
-						<i class="fa fa-home"></i>
-						<span>Home</span>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<i class="fa fa-message"></i>
-						<span>Reviews</span>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<i class="fa fa-user"></i>
-						<span>Profile</span>
-					</a>
-				</li>
-				<li>
-					<a href="{{ url_for('login') }}">
-						<i class="fa fa-arrow-pointer"></i>
-						<span>Log in</span>
-					</a>
-				</li>
-				<li>
-					<a href="{{ url_for('logout') }}">
-						<i class="fa fa-right-to-bracket"></i>
-						<span>Log out</span>
-					</a>
-				</li>
-			</ul>
-		</div>
-		<form class="search-container">
-			<input class="form-control me-2" id="search-input" type="text" placeholder="Search">
-			<button class="btn btn-secondary" id="search-btn" type="button" title="Search Box">
-				<i class="fa fa-search"></i>
-			</button>
-			<div class="search-result-box" id="search-result"></div>
-		</form>
-	</nav>
-	<div class="hero-image">
-		<img src="{{ url_for('static', filename='background.jpg') }}">
-		<div class="heading">
-			<h2>Write your book review now!</h2>
-		</div>
-	</div>
+
+{% block content %}
+</div>
 	<div class="main-content">
 		<h1>Hi, {{ current_user.username }}!</h1>
 		<form action="" method="POST">
@@ -96,24 +19,6 @@
 		
 
 		{% endfor %}
-		{% block content %}{% endblock %}
-	</div>
-	<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const checkbox = document.getElementById("checkbox");
-        const searchContainer = document.querySelector(".search-container");
+		{% endblock %}
 
-        checkbox.addEventListener("change", function () {
-            if (checkbox.checked) {
-                searchContainer.style.visibility = "visible";
-            } else {
-                searchContainer.style.visibility = "hidden";
-            }
-        });
-    });
-	</script>
-
-
-</body>
-
-</html>
+	
