--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -15,7 +15,7 @@
 		{% for post in posts %}
 		<p><strong>{{ post.author.username }}</strong> said: </p>
 		<p>{{ post.body }}</p>
-		<p>Posted on:  {{ post.timestamp }}</p><br>
+		<p>Posted on:  {{ post.timestamp }}</p><hr>
 		
 
 		{% endfor %}
