--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -1,14 +1,15 @@
-
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
+
 body {
 	width: 100vm;
-    min-height: 100vh;
+	min-height: 100vh;
 	background-color: #f2f2f2;
 }
+
 .sidebar {
 	position: relative;
 	width: 100%;
@@ -17,12 +18,13 @@ body {
 	background-color: #fff;
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
+
 .search-container {
 	position: absolute;
 	left: 50%;
 	top: 8px;
 	transform: translateX(-50%);
-	display:flex;
+	display: flex;
 	flex-wrap: nowrap;
 	z-index: 0;
 }
@@ -42,22 +44,25 @@ body {
 	transition: all 0.5s;
 	z-index: 2;
 }
+
 .sidebar ul {
 	position: absolute;
 	top: 0;
 	left: 0;
-    padding-left: 12px;
+	padding-left: 12px;
 	width: 160px;
 	height: 100vh;
 	background-color: rgba(0, 0, 0, 0.8);
 	transition: all 0.5s;
 	z-index: 1;
 }
+
 .sidebar ul li {
 	width: 100%;
 	height: 55px;
 	margin-bottom: 10px;
 }
+
 /* -- Sidebar title element -- */
 .sidebar ul li:first-child {
 	display: flex;
@@ -68,15 +73,18 @@ body {
 	height: 150px;
 	padding: 10px;
 }
+
 .sidebar ul li:first-child img {
 	width: 70px;
 	border-radius: 50%;
 }
+
 .sidebar ul li:first-child span {
 	color: #fff;
 	font-size: 14px;
 	white-space: nowrap;
 }
+
 /* Sidebar body element */
 .sidebar ul li a {
 	display: flex;
@@ -87,30 +95,38 @@ body {
 	text-decoration: none;
 	border-left: 5px solid transparent;
 }
+
 .sidebar ul li a i {
 	font-size: 18px;
 	margin: 0 15px;
 }
+
 .sidebar ul li a span {
 	font-size: 14px;
 }
+
 .sidebar ul li a:hover {
 	color: #fff;
 	border-left-color: white;
 }
-.sidebar input:checked + label {
+
+.sidebar input:checked+label {
 	left: 0;
 }
-.sidebar input:checked + label i {
+
+.sidebar input:checked+label i {
 	transform: rotateY(180deg);
 }
-.sidebar input:checked ~ ul {
+
+.sidebar input:checked~ul {
 	left: -160px;
 }
 
 .hero-image {
 	position: relative;
+	margin-bottom: 2%;
 }
+
 /* -- Hero image -- */
 .hero-image img {
 	width: 100%;
@@ -121,32 +137,41 @@ body {
 	opacity: 0.3;
 	filter: alpha(opacity=30);
 }
+
 .hero-image {
-	background-color:  #000;
+	background-color: #000;
 }
+
 /* Text Effect */
 .heading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    text-align: center;
-    z-index: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	text-align: center;
+	z-index: 0;
 }
+
 .heading h2 {
-    font-size: 50px;
-    color: #fff;
-    text-align: center;
-    overflow: hidden;
-    background: linear-gradient(90deg, #000,#fff,#000);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    animation: light 5s linear infinite;
-    background-clip: text;
-    -webkit-text-fill-color: rgba(255,255,255,0);
+	font-size: 50px;
+	color: #fff;
+	text-align: center;
+	overflow: hidden;
+	background: linear-gradient(90deg, #000, #fff, #000);
+	background-repeat: no-repeat;
+	background-size: 80%;
+	animation: light 5s linear infinite;
+	background-clip: text;
+	-webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
+
 @keyframes light {
-    0%{background-position: -300%;}
-    100%{background-position: 300%;}
+	0% {
+		background-position: -300%;
+	}
+
+	100% {
+		background-position: 300%;
+	}
 }
