--- a/blogweb/app/templates/404.html
+++ b/blogweb/app/templates/404.html
@@ -1,34 +1,40 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Basic Page Needs -->
-        <meta charset="UTF-8">
-        <meta name="description" content="This is a page that shows content not found.">
-        <meta name="author" content="Yunfang Lyu(23685059)">
-        <!-- Reference by https://codepen.io/valerite-dev/pen/KMZyLz -->
-        <meta name="keywords" content="404">
-        <title>BookReviews</title>
-        <!-- Mobile Specific Metas -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <!-- Stylesheets -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='404.css') }}">
-    </head>
-    <body>
-        <div class="tips">
-            <h1>Error 404</h1>
-            <br>
-            <p>The page you're looking for can't be found</p>
+  <head>
+    <!-- Basic Page Needs -->
+    <meta charset="UTF-8">
+    <meta name="description" content="This is a 404 error page for our web app.">
+    <meta name="author" content="Yunfang Lyu(23685059)">
+    <meta name="keywords" content="404 status">
+    <title>404 Error Page</title>
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='404.css') }}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Creepster" >
+  </head>
+  <body>
+    <div class="hero-image">
+      <img src="{{ url_for('static', filename='background.jpg') }}" alt="background image">
+      <div class="container">
+        <div id="heading-container">
+          <h1 class="center-text" id="heading">404 NOT FOUND</h1>
         </div>
-        <div class="container">
-            <div class="shelf">
-                <a class="book home-page">Home Page</a>
-                <a class="book profile">Profile</a>
-                <span class="book not-found"></span>
-                <span class="door left"></span>
-                <span class="door right"></span>
-            </div>
+        <div class="eye-container">
+          <div class="eyes" id="left-eye">
+            <div class="pupils" id="left-pupil"></div>
+          </div>
+          <div class="eyes" id="right-eye">
+            <div class="pupils" id="right-pupil"></div>
+          </div>
         </div>
-    </body>
+        <div class="center-text">
+          <h3>WHO TURNED OFF THE LIGHT?</h3>
+          <h2>Can not find anything</h2>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
