--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -5,7 +5,10 @@
   <table>
     <tr valign="top">
         <td><img src="{{ user.avatar(128) }}"></td>
-        <td><h1>User: {{ user.username }}</h1></td>
+        <td><h2>User: {{ user.username }}</h2>
+        <h2>Email: {{ user.email }}</h2>
+        {% if user.about_me %}<span>{{ user.about_me }}</span>{% endif %}
+        {% if user.last_seen %}<span>Last seen on: {{ user.last_seen }}</span>{% endif %}</td>
     </tr>
 </table>
 <hr>
