--- a/blogweb/app/static/404.css
+++ b/blogweb/app/static/404.css
@@ -75,3 +75,12 @@
   80%{transform: rotateX(0deg);}
   100%{transform: rotateX(0deg);}
 }
+
+a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+a:hover {
+  color: gray;
+}
