add go back home link for 404 html

--- a/blogweb/app/templates/404.html
+++ b/blogweb/app/templates/404.html
@@ -33,6 +33,8 @@
         <div class="center-text">
           <h3>WHO TURNED OFF THE LIGHT?</h3>
           <h2>Can not find anything</h2>
+          <br>
+          <a href="{{ url_for('index') }}">Go Back Home</a>
         </div>
       </div>
     </div>
