--- a/blogweb/app/templates/reset-request.html
+++ b/blogweb/app/templates/reset-request.html
@@ -8,25 +8,16 @@
 					<h1 class="form-title">Reset Password</h1>
 					<div class="form-content">
 						<div class="form-box">
-							<i class="ri-lock-2-line input-icon"></i>
+							<i class="ri-mail-line input-icon"></i>
 							<div class="input-box">
-								{{ form.password(size=32, class="input-area", placeholder=" ") }}
-								{{ form.password.label(class="input-label") }}
-							</div>
-						</div>
-					</div>
-					<div class="form-content">
-						<div class="form-box">
-							<i class="ri-lock-2-line input-icon"></i>
-							<div class="input-box">
-								{{ form.password2(size=32, class="input-area", placeholder=" ") }}
-								{{ form.password2.label(class="input-label") }}
+								{{ form.email(size=64, class="input-area", placeholder=" ") }}
+								{{ form.email.label(class="input-label") }}
 							</div>
 						</div>
 					</div>
 					{{ form.submit(class="submit-button") }}
 					<p class="reminder">
-						Successful?
+						Cancel Reset?
 						<br>
 						<a class="flipbutton" href="{{ url_for('login') }}">Login Here</a>
 					</p>
@@ -34,4 +25,4 @@
 			</div>
 		</div>
 	</div>
-	{% endblock %}
+{% endblock %}
