--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -12,6 +12,7 @@
 		
 		<title>{% block title %}Welcome to webapp!{% endblock %}</title>
 		{% endif %}
+		{% block styles %}{% endblock %}
 		<!-- Mobile Specific Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
