--- a/blogweb/app/templates/edit_profile.html
+++ b/blogweb/app/templates/edit_profile.html
@@ -21,6 +21,11 @@
           {{ form.username(size=32) }}<br>
           {% for error in form.username.errors %}
           <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}<br>
+          {{ form.email.label }}
+          {{ form.email(size=32) }}<br>
+          {% for error in form.email.errors %}
+          <span style="color: red;">[{{ error }}]</span>
           {% endfor %}<br>        
           {{ form.about_me.label }}<br>
           {{ form.about_me(cols=50, rows=4) }}<br>
