--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -95,12 +95,14 @@ body {
 	border-left: 5px solid transparent;
 }
 
-.sidebar ul li a i {
+.sidebar ul li a i,
+.sidebar ul li form button i {
 	font-size: 18px;
 	margin: 0 15px;
 }
 
-.sidebar ul li a span {
+.sidebar ul li a span,
+.sidebar ul li form button span {
 	font-size: 14px;
 }
 
@@ -108,7 +110,31 @@ body {
 	color: #fff;
 	border-left-color: white;
 }
+/* -- Delete form -- */
+.sidebar ul li form {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
 
+.sidebar ul li form button {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	color: #d2d2d2;
+	text-decoration: none;
+	border: none;
+	background: none;
+	padding: 0;
+}
+
+.sidebar ul li form button:hover {
+	color: #fff;
+}
+
+/* -- Sidebar check -- */
 .sidebar input:checked+label {
 	left: 0;
 }
@@ -121,12 +147,11 @@ body {
 	left: -160px;
 }
 
+/* -- Hero image -- */
 .hero-image {
 	position: relative;
 	margin-bottom: 2%;
 }
-
-/* -- Hero image -- */
 .hero-image img {
 	width: 100%;
 	height: 25vh;
