--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -10,7 +10,22 @@
         {% if user.about_me %}<span>{{ user.about_me }}</span>{% endif %}
         {% if user.last_seen %}<span>Last seen on: {{ user.last_seen }}</span>{% endif %}
         {% if user == current_user %}
-        <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>{% endif %}
+        <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+        {% elif not current_user.is_following(user) %}
+        <p>
+            <form action="{{ url_for('follow', username=user.username) }}" method="post">
+                {{ form.hidden_tag() }}
+                {{ form.submit(value='Follow') }}
+            </form>
+        </p>
+        {% else %}
+        <p>
+            <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+                {{ form.hidden_tag() }}
+                {{ form.submit(value='Unfollow') }}
+            </form>
+        </p>
+        {% endif %}
       </td>
     </tr>
 </table>
