--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,8 @@
     <div>
         Microblog:
         <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('edit_comment') }}">blog</a>
+
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login</a>
         {% else %}
