--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -24,24 +24,25 @@
 {{ post.author.username }} says: <b>{{ post.body }}</b>
 </p>
 {% endfor %}
+<h3>Comment</h3>
+{% for post in posts %}
 		<div class="comments-container">
-			<h3>Comment</h3>
+			
 			<div id="comments-list" class="comments-list">
 				<div class="comment-avatar"><img
 						src="{{ current_user.avatar(180) }}" alt="image"></div>
 				<div class="comment-box">
 					<div class="comment-head">
-						<h6 class="comment-name by-author"><a href="#">Agustin Ortiz</a></h6>
-						<span>timestamp 2024.04.27 14:00</span>
+						<h6 class="comment-name by-author"><a href="#">{{ post.author.username }}</a></h6>
+						<span>{{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</span>
 						<i class="fa fa-heart"></i>
 					</div>
-					<div class="comment-content">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae,
-						praesentium optio, sapiente distinctio illo?
+					<div class="comment-content">{{ post.body }}
 					</div>
 				</div>
 			</div>
 		</div>
+		{% endfor %}
 {% endblock %}
 
 	
