--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -8,7 +8,7 @@
         <td><h2>User: {{ user.username }}</h2>
         <h2>Email: {{ user.email }}</h2>
         {% if user.about_me %}<span>{{ user.about_me }}</span>{% endif %}
-        {% if user.last_seen %}<span>Last seen on: {{ user.last_seen }}</span>{% endif %}
+        {% if user.last_seen %}<span>Last seen on: {{ user.last_seen.strftime('%Y-%m-%d %H:%M:%S') }}</span>{% endif %}
         {% if user == current_user %}
         <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
         {% elif not current_user.is_following(user) %}
