--- a/blogweb/app/static/base.css
+++ b/blogweb/app/static/base.css
@@ -95,18 +95,44 @@ body {
 	border-left: 5px solid transparent;
 }
 
-.sidebar ul li a i {
+.sidebar ul li a i,
+.sidebar ul li form button i {
 	font-size: 18px;
 	margin: 0 15px;
 }
 
-.sidebar ul li a span {
+.sidebar ul li a span,
+.sidebar ul li form button span {
 	font-size: 14px;
 }
 
 .sidebar ul li a:hover {
 	color: #fff;
 	border-left-color: white;
+}
+
+/* -- Delete form -- */
+.sidebar ul li form {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+.sidebar ul li form button {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	color: #d2d2d2;
+	text-decoration: none;
+	border: none;
+	background: none;
+	padding: 0;
+}
+
+.sidebar ul li form button:hover {
+	color: #fff;
 }
 
 .sidebar input:checked+label {
