--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -90,7 +90,7 @@
 		<div class="hero-image">
 			<img src="{{ url_for('static', filename='background.jpg') }}">
 			<div class="heading">
-				<h2>Write your book review now!</h2>
+				<h2>Post your comments now!</h2>
 			</div>
 		</div>
 		{% block content %}{% endblock %}	
