--- a/blogweb/app/templates/base2.html
+++ b/blogweb/app/templates/base2.html
@@ -21,5 +21,14 @@
 		{% block content %}{% endblock %}
 		<!-- JavaScripts -->
 		<script src="{{ url_for('static', filename='flip.js') }}"></script>
+		<script>
+			{% with messages = get_flashed_messages() %}
+					{% if messages %}
+							{% for message in messages %}
+									alert("{{ message }}");
+							{% endfor %}
+					{% endif %}
+			{% endwith %}
+	</script>	
 	</body>
 </html>
