--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -38,6 +38,12 @@
 			</div>
 		</div>
 		{% endfor %}
+		{% if prev_url %}
+    <a href="{{ prev_url }}">Newer posts</a>
+    {% endif %}
+    {% if next_url %}
+    <a href="{{ next_url }}">Older posts</a>
+    {% endif %}
 {% endblock %}
 
 	
