--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -45,7 +45,7 @@
 					<li>
 						<a href="#">
 							<i class="fa fa-message"></i>
-							<span>Reviews</span>
+							<span>Messages</span>
 						</a>
 					</li>
 					<li>
