--- a/blogweb/app/templates/reset.html
+++ b/blogweb/app/templates/reset.html
@@ -10,7 +10,7 @@
 						<div class="form-box">
 							<i class="ri-lock-2-line input-icon"></i>
 							<div class="input-box">
-								{{ form.password(size=32, class="input-area", placeholder=" ") }}
+								{{ form.password(size=32, class="input-area", id="reset-password", placeholder=" ") }}
 								{{ form.password.label(class="input-label") }}
 							</div>
 						</div>
@@ -19,7 +19,7 @@
 						<div class="form-box">
 							<i class="ri-lock-2-line input-icon"></i>
 							<div class="input-box">
-								{{ form.password2(size=32, class="input-area", placeholder=" ") }}
+								{{ form.password2(size=32, class="input-area", id="reset-confirm", placeholder=" ") }}
 								{{ form.password2.label(class="input-label") }}
 							</div>
 						</div>
@@ -34,4 +34,7 @@
 			</div>
 		</div>
 	</div>
+	<script>
+		
+	</script>
 	{% endblock %}
