--- a/blogweb/app/templates/base.html
+++ b/blogweb/app/templates/base.html
@@ -22,6 +22,7 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	</head>
 
 	<body>
