--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -6,10 +6,8 @@
     <tr valign="top">
         <td><img src="{{ user.avatar(128) }}"></td>
         <td><h2>User: {{ user.username }}</h2>
-          <p>Follower {{user.followers_count()}} Following {{user.following_count()}}</p>
-
-        <h2>Email: {{ user.email }}</h2>
         {% if user.about_me %}<span>{{ user.about_me }}</span>{% endif %}
+        <span>Follower {{user.followers_count()}} Following {{user.following_count()}}</span><br>
         {% if user.last_seen %}<span>Last seen on: {{ user.last_seen.strftime('%Y-%m-%d %H:%M:%S') }}</span>{% endif %}
         {% if user == current_user %}
         <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
@@ -33,7 +31,14 @@
 </table>
 <hr>
 {% for post in posts %}
-    {% include '_post.html' %}
+<table>
+  <tr valign="top">
+      <td style:"width=70px"><img src="{{ post.author.avatar(80) }}"></td>
+      <td>
+        <strong><a href="{{ url_for('user', username=post.author.current) }}">{{ post.author.username }}</a></strong> said:<br>{{ post.body }}<br>
+        Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+  </tr>
+</table><hr>
 {% endfor %}
 
 
