--- a/blogweb/app/templates/_post.html
+++ b/blogweb/app/templates/_post.html
@@ -1,6 +1,6 @@
 <table>
   <tr valign="top">
-      <td style:"width=70px"><img src="{{ post.author.avatar(80) }}"></td>
+      <td style:"width=70px"><img src="{{ post.author.avatar(80) }}" style="width: 100px; height: 100px;"></td>
       <td>
         <strong>{{ post.author.username }}</strong> said:<br>{{ post.body }}<br>
         Posted on:  {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</td>
