--- a/blogweb/app/templates/edit_profile.html
+++ b/blogweb/app/templates/edit_profile.html
@@ -1,60 +1,75 @@
 {% extends "base.html" %}
 {% block title %}Edit Profile{% endblock %}
 {% block styles %}
-{{ super() }} 
-<link rel="stylesheet" href="{{ url_for('static', filename='edit_profile.css') }}">{% endblock %}
-{% block content %}
-    <div class="profile-container">
-      <h1>Personal Information</h1>
-      <div class="info-view">
-        <img src="{{ user.avatar(128) }}">
-        <p><strong>Username: </strong><span id="username">{{ user.username }}</span></p>
-        <p>
-          <strong>Email: </strong><span id="email">{{ user.email }}</span>
-        </p>
-        <p><strong>About me: </strong><span id="bio">{{ user.about_me }}</span></p>
-        <button id="editBtn">Edit</button>
-      </div>
-      <form id="editForm" style="display: none" action="" method="post">
-          {{ form.hidden_tag() }}
-          {{ form.username.label() }}
-          {{ form.username(size=32, id="reset-username")}}<br>
-          {% for error in form.username.errors %}
-          <span style="color: red;">[{{ error }}]</span>
-          {% endfor %}<br>
-          {{ form.email.label }}
-          {{ form.email(size=32, id="reset-email") }}<br>
-          {% for error in form.email.errors %}
-          <span style="color: red;">[{{ error }}]</span>
-          {% endfor %}<br>        
-          {{ form.about_me.label }}<br>
-          {{ form.about_me(cols=50, rows=4, id="about-me") }}<br>
-          {% for error in form.about_me.errors %}
-          <span style="color: red;">[{{ error }}]</span>
-          {% endfor %}<br>
-          {{ form.submit() }}<br /><br />
-        <label for="avatarInput">Change avatar:</label>
-        <input type="file" id="avatarInput" accept="image/*" /><br><br>
-        <button type="button" onclick="saveChanges()">Save</button>        
-      </form>
-    </div>
-    <script>
-      document.getElementById("editBtn").addEventListener("click", function () {
-        document.getElementById("editForm").style.display = "block";
-        document.getElementById("editBtn").style.display = "none";
-      });
-    
-      document.getElementById("saveBtn").addEventListener("click", function () {
-        var username = document.getElementById("usernameInput").value;
-        var bio = document.getElementById("bioInput").value;
-    
-        document.getElementById("username").textContent = username;
-        document.getElementById("bio").textContent = bio;
-    
-        document.getElementById("editForm").style.display = "none";
-        document.getElementById("editBtn").style.display = "block";
-      });
-    </script>
-    <script src="{{ url_for('static', filename='validation2.js') }}"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='edit_profile.css') }}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+{% endblock %}
 
+{% block content %}
+  <div class="edit-container">
+    <h1>Personal Information</h1>
+    <div class="profile-container">
+      <div class="info-view">
+        <div class="avatar-upload">
+          <img id="user-avatar" src="{{ user.avatar(128) }}">
+          <div class="avatar-edit">
+            <form class="avatar-form" id="avatar-form" method="post" enctype="multipart/form-data" action="/upload_avatar">
+              <input type="file" name="avatar-upload" id="image-upload" accept="image/*">
+              <label for="image-upload"></label>
+              <br>
+              <input id="image-button" type="submit" value="Upload">
+              <button id="image-default" type="button">Default</button>
+            </form>
+          </div>
+        </div>
+        <div class="info-list">
+          <p><strong>Username: </strong><span id="username">{{ user.username }}</span></p>
+          <p><strong>Email: </strong><span id="email">{{ user.email }}</span></p>
+          <p><strong>About me: </strong><span id="bio">{{ user.about_me }}</span></p>
+          <button id="editBtn">Edit</button>
+        </div>
+      </div>
+    </div>
+    <form id="editForm" style="display: none" action="" method="post">
+      {{ form.hidden_tag() }}
+      <br> 
+      {{ form.username.label() }}
+      {{ form.username(size=32, id="reset-username")}}<br>
+      {% for error in form.username.errors %}
+      <span style="color: red;">[{{ error }}]</span>
+      {% endfor %}<br>
+      {{ form.email.label }}
+      {{ form.email(size=32, id="reset-email") }}<br>
+      {% for error in form.email.errors %}
+      <span style="color: red;">[{{ error }}]</span>
+      {% endfor %}<br>        
+      {{ form.about_me.label }}<br>
+      {{ form.about_me(cols=50, rows=4, id="about-me") }}<br>
+      {% for error in form.about_me.errors %}
+      <span style="color: red;">[{{ error }}]</span>
+      {% endfor %}<br>
+      {{ form.submit() }}<br /><br />
+    </form>
+  </div>
+  <script>
+    $(document).ready(function() {
+      $("#editBtn").click(function() {
+        $("#editForm").css("display", "block");
+        $(this).css("display", "none");
+      });
+  
+      $("#saveBtn").click(function() {
+        var username = $("#usernameInput").val();
+        var bio = $("#bioInput").val();
+  
+        $("#username").text(username);
+        $("#bio").text(bio);
+  
+        $("#editForm").css("display", "none");
+        $("#editBtn").css("display", "block");
+      });
+    });
+  </script>
+  <script src="{{ url_for('static', filename='validation2.js') }}"></script>
+  <script src="{{ url_for('static', filename='avatar.js') }}"></script>
 {% endblock %}
