--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -4,7 +4,7 @@
 <div>
   <table>
     <tr valign="top">
-        <td><img src="{{ user.avatar(128) }}"></td>
+        <td><img src="{{ user.avatar(128) }}" style="width: 100px; height: 100px;"></td>
         <td><h2>User: {{ user.username }}</h2>
           <p>Follower {{user.followers_count()}} Following {{user.following_count()}}</p>
 
