update all fields that need validation, front-end & back-end

--- a/blogweb/app/templates/edit_profile.html
+++ b/blogweb/app/templates/edit_profile.html
@@ -70,6 +70,6 @@
       });
     });
   </script>
-  <script src="{{ url_for('static', filename='validation2.js') }}"></script>
+  <script src="{{ url_for('static', filename='validate-edit.js') }}"></script>
   <script src="{{ url_for('static', filename='avatar.js') }}"></script>
 {% endblock %}
