--- a/blogweb/app/templates/register.html
+++ b/blogweb/app/templates/register.html
@@ -52,5 +52,5 @@
 			</div>
 		</div>
 	</div>
-	<script src="{{ url_for('static', filename='validation.js') }}"></script>
+	<script src="{{ url_for('static', filename='validate-register.js') }}"></script>
 {% endblock %}
