--- a/blogweb/app/templates/reset.html
+++ b/blogweb/app/templates/reset.html
@@ -3,7 +3,7 @@
 	<div class="flip-container">
 		<div class="flipper" id="flipper">
 			<div class="reset" id="reset">
-				<form class="form-container" action="" method="POST" novalidate>
+				<form class="form-container" id="reset-form" action="" method="POST" novalidate>
 					{{ form.hidden_tag() }}
 					<h1 class="form-title">Reset Password</h1>
 					<div class="form-content">
@@ -34,7 +34,5 @@
 			</div>
 		</div>
 	</div>
-	<script>
-		
-	</script>
+	<script src="{{ url_for('static', filename='validate-reset.js') }}"></script>
 	{% endblock %}
